changed [js- to .js to keep W3C rules

--- a/src/components/auth/_signup.pug
+++ b/src/components/auth/_signup.pug
@@ -7,7 +7,7 @@
   .auth__body
     h1.auth__heading Регистрация
 
-    form.auth__form(action='#' js-validate-form)
+    form.auth__form(action='#').js-validate-form
       .ui-group
         label(for="organization") Название организации
         input.ui-input(type='text' name='organization')
