--- a/src/components/mainFooter/_mainFooter.pug
+++ b/src/components/mainFooter/_mainFooter.pug
@@ -1,5 +1,5 @@
 mixin mainFooter(btnText, returnLink)
-  .main-footer(js-min-footer-onscroll)
+  .main-footer.js-min-footer-onscroll
     .main-footer__container.container
       if returnLink
         a.main-footer__return(href=returnLink.url title=returnLink.name)
