--- a/src/components/popups/_popups.pug
+++ b/src/components/popups/_popups.pug
@@ -5,7 +5,7 @@
   .popup__body
     p Все внесенные изменения будут потеряны.
     .popup__buttons
-      a.cancel(href="#" js-close-modal) Вернуть к редактированию
+      a.cancel(href="#").js-close-modal Вернуть к редактированию
       a.btn.btn-primary(href="#") Сохранить и продолжить
 
 .popup.mfp-with-anim.mfp-hide#client-already-registered
@@ -15,7 +15,7 @@
     p Данный клиент уже зарегистрирован в системе под ником
       span SEBEKON-1
     .popup__buttons
-      a.cancel(href="#" js-close-modal) Отменить
+      a.cancel(href="#").js-close-modal Отменить
       a.btn.btn-primary(href="#") Создать проект для существующего клиента
 
 // PAGE-POPUPS :: END
