--- a/src/components/projectCard/_project-card.sass
+++ b/src/components/projectCard/_project-card.sass
@@ -6,7 +6,7 @@
   z-index: 1
   padding: 26px 0
   border-bottom: 1px solid $borderColor
-  &[js-link]
+  &.js-link
     cursor: pointer
   &::before
     content: ''
