--- a/src/pug/form-passport.pug
+++ b/src/pug/form-passport.pug
@@ -12,7 +12,7 @@ block content
     +mainHeader("Создание анкеты", 'forms', 2)
 
     form.main-body(action='/' method='post')
-      .main-content(js-main-content-scroller)
+      .main-content.js-main-content-scroller
         ._container.container
           ._inner
 
