--- a/src/pug/project-questions.pug
+++ b/src/pug/project-questions.pug
@@ -12,34 +12,34 @@ block content
     +mainHeader("Интернет-магазин Спортмастер", 'projects', 1)
 
     form.main-body(action='/' method='post')
-      .main-content(js-main-content-scroller)
+      .main-content.js-main-content-scroller
         ._container.container
           //- ._inner
           .project-questions
             .__sidebar
               p.__sidebar-title Разработка интернет-магазина
               .__sidebar-item.main
-                a(href="#" js-open-parent) Нужен ли вам маркетинг?
+                a.js-open-parent(href="#") Нужен ли вам маркетинг?
                 .__sidebar-item
-                  a(href="#" js-open-parent) Укажите общий бюджет на маркетинг
+                  a.js-open-parent(href="#") Укажите общий бюджет на маркетинг
                   .__sidebar-item
-                    a(href="#" js-open-parent) Требуется ли вам offline-маркетинг?
+                    a.js-open-parent(href="#") Требуется ли вам offline-маркетинг?
                     .__sidebar-item.last
-                      a(href="#" js-open-parent) Нужны ли вам работы над сайтом?
+                      a.js-open-parent(href="#") Нужны ли вам работы над сайтом?
                   .__sidebar-item
-                    a(href="#" js-open-parent) Требуется ли вам интернет-маркетинг?
+                    a.js-open-parent(href="#") Требуется ли вам интернет-маркетинг?
                     .__sidebar-item.last
-                      a(href="#" js-open-parent) Нужны ли вам работы над сайтом?
+                      a.js-open-parent(href="#") Нужны ли вам работы над сайтом?
                     .__sidebar-item.last
-                      a(href="#" js-open-parent) Нужна ли работа с целевой аудиторией и мониторинг работы компании?
+                      a.js-open-parent(href="#") Нужна ли работа с целевой аудиторией и мониторинг работы компании?
                   .__sidebar-item.last
-                    a(href="#" js-open-parent) Требуется ли вам комплексный маркетинг?
+                    a.js-open-parent(href="#") Требуется ли вам комплексный маркетинг?
                 .__sidebar-item
-                  a(href="#" js-open-parent) Укажите желаемое время реализации
+                  a.js-open-parent(href="#") Укажите желаемое время реализации
               .__sidebar-item.main
-                a(href="#" js-open-parent) Нужны ли вам услуги дизайна?
+                a.js-open-parent(href="#") Нужны ли вам услуги дизайна?
               .__sidebar-item.main
-                a(href="#" js-open-parent) Нужны ли вам услуги программирования?
+                a.js-open-parent(href="#") Нужны ли вам услуги программирования?
             .__content
               .__progress
                 .__point(style="padding-left: 24%") 24%
