--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -13,7 +13,7 @@ block content
     +mainHeader("Проекты", 'projects-create', false, true)
 
     .main-body
-      .main-content(js-main-content-scroller)
+      .main-content.js-main-content-scroller
         ._container.container
           ._list
             -
