--- a/src/pug/ui.pug
+++ b/src/pug/ui.pug
@@ -13,8 +13,8 @@ block content
           ._inner
 
             h1 Модальные
-            a.btn.btn-primary(href="#attention" js-popup ) Обратите внимание
-            a.btn.btn-primary(href="#client-already-registered" js-popup ) Клиент уже зарегистрирован в системе
+            a.btn.btn-primary(href="#attention").js-popup Обратите внимание
+            a.btn.btn-primary(href="#client-already-registered").js-popup Клиент уже зарегистрирован в системе
 
 
             h1 H1 заголовок
