--- a/src/components/auth/_login.pug
+++ b/src/components/auth/_login.pug
@@ -7,7 +7,7 @@
   .auth__body
     h1.auth__heading Вход
 
-    form.auth__form(action='#' js-validate-form)
+    form.auth__form(action='#').js-validate-form
       .ui-group
         label(for="login") Логин
         input.ui-input(type='text' name='login' required)
