--- a/src/pug/form-add.pug
+++ b/src/pug/form-add.pug
@@ -11,8 +11,8 @@ block content
   .page-main
     +mainHeader("Создание анкеты", 'forms', 2)
 
-    form.main-body(action='/' js-validate-form)
-      .main-content(js-main-content-scroller)
+    form.main-body(action='/' ).js-validate-form
+      .main-content.js-main-content-scroller
         ._container.container
           ._inner
 
@@ -26,7 +26,7 @@ block content
               .ui-group.-inline
                 label(for="description") Описание
                 ._content
-                  textarea.ui-input(rows='6' name="description" js-autosize )
+                  textarea.ui-input.js-autosize(rows='6' name="description")
 
               .ui-group.-inline
                 label Тип анкеты
