--- a/src/pug/form-questions.pug
+++ b/src/pug/form-questions.pug
@@ -12,7 +12,7 @@ block content
     +mainHeader("Создание анкеты", 'forms', 2)
 
     form.main-body(action='/' method='post')
-      .main-content(js-main-content-scroller)
+      .main-content.js-main-content-scroller
         ._container.container
           .project-questions
             .__sidebar
@@ -34,30 +34,30 @@ block content
                         span._handle
               p.__sidebar-title Разработка интернет-магазина
               .__sidebar-item.main
-                a(href="#" js-open-parent) Нужен ли вам маркетинг?
+                a.js-open-parent(href="#") Нужен ли вам маркетинг?
                 .__sidebar-item
-                  a(href="#" js-open-parent) Укажите общий бюджет на маркетинг
+                  a.js-open-parent(href="#") Укажите общий бюджет на маркетинг
                   .__sidebar-item
-                    a(href="#" js-open-parent) Требуется ли вам offline-маркетинг?
+                    a.js-open-parent(href="#") Требуется ли вам offline-маркетинг?
                     .__sidebar-item.last
-                      a(href="#" js-open-parent) Нужны ли вам работы над сайтом?
+                      a.js-open-parent(href="#") Нужны ли вам работы над сайтом?
                   .__sidebar-item
-                    a(href="#" js-open-parent) Требуется ли вам интернет-маркетинг?
+                    a.js-open-parent(href="#") Требуется ли вам интернет-маркетинг?
                     .__sidebar-item.last
-                      a(href="#" js-open-parent) Нужны ли вам работы над сайтом?
+                      a.js-open-parent(href="#") Нужны ли вам работы над сайтом?
                     .__sidebar-item.last.error
-                      a(href="#" js-open-parent) Нужна ли работа с целевой аудиторией и мониторинг работы компании?
+                      a.js-open-parent(href="#") Нужна ли работа с целевой аудиторией и мониторинг работы компании?
                         //- span.error(data-att="Добавьте ответ к этой связи")
                         span.error
                         span.hint Добавьте ответ к этой связи
                   .__sidebar-item.last
-                    a(href="#" js-open-parent) Требуется ли вам комплексный маркетинг?
+                    a.js-open-parent(href="#") Требуется ли вам комплексный маркетинг?
                 .__sidebar-item
-                  a(href="#" js-open-parent) Укажите желаемое время реализации
+                  a.js-open-parent(href="#") Укажите желаемое время реализации
               .__sidebar-item.main
-                a(href="#" js-open-parent) Нужны ли вам услуги дизайна?
+                a.js-open-parent(href="#") Нужны ли вам услуги дизайна?
               .__sidebar-item.main
-                a(href="#" js-open-parent) Нужны ли вам услуги программирования?
+                a.js-open-parent(href="#") Нужны ли вам услуги программирования?
             .form-questions__content
               .form-questions__head
                 .form-questions__head-left
@@ -70,7 +70,7 @@ block content
               .form-questions__role
                 p Выберите роль:
                 .form-questions__role-select
-                  select.ui-input(js-select)
+                  select.ui-input.js-select
                     option Дизайнер
                     option(value='0') Роль 1
                     option(value='1') Роль 1
@@ -90,7 +90,7 @@ block content
                       label.ui-toggle._ui-toggle
                         input._input(type='checkbox' name='test_12')
                         span._handle
-              .form-questions__items#items1
+              .form-questions__items#sortable
                 .form-questions__item
                   .form-questions__item-head
                     p.form-questions__answer ответ 1
@@ -113,7 +113,7 @@ block content
                     .form-questions__item-body-grid
                       .form-questions__item-body-left
                         input.ui-input(type='text' name='login' placeholder="Название задачи")
-                        select.ui-input(js-select)
+                        select.ui-input.js-select
                           option Выберите роль
                           option(value='0') Роль 1
                           option(value='1') Роль 1
