--- a/src/pug/forms.pug
+++ b/src/pug/forms.pug
@@ -13,7 +13,7 @@ block content
 
 
     .main-body
-      .main-content(js-main-content-scroller)
+      .main-content.js-main-content-scroller
         ._container.container
           ._list
             -
