--- a/src/pug/project-add.pug
+++ b/src/pug/project-add.pug
@@ -11,8 +11,8 @@ block content
   .page-main
     +mainHeader("Создание проекта", 'projects', 1)
 
-    form.main-body(action='/' js-validate-form)
-      .main-content(js-main-content-scroller)
+    form.main-body(action='/' ).js-validate-form
+      .main-content.js-main-content-scroller
         ._container.container
           ._inner
 
@@ -26,13 +26,13 @@ block content
               .ui-group.-inline
                 label(for="description") Описание
                 ._content
-                  textarea.ui-input(rows='6' name="description" js-autosize )
+                  textarea.ui-input.js-autosize(rows='6' name="description")
 
               .ui-group.-inline
                 label(for="type") Тип анкеты
                   i.required *
                 ._content
-                  select.ui-input(js-select name="type" required)
+                  select.ui-input.js-select(name="type" required)
                     option(value='') Выберите из списка
                     option(value='0') Тип 1
                     option(value='1') Тип 2
