--- a/src/pug/project-roles.pug
+++ b/src/pug/project-roles.pug
@@ -12,7 +12,7 @@ block content
     +mainHeader("Интернет-магазин Спортмастер", 'projects', 1)
 
     form.main-body(action='/' method='post')
-      .main-content(js-main-content-scroller)
+      .main-content.js-main-content-scroller
         ._container.container
           ._inner
 
