fixed labels, add center class for layout

--- a/src/components/auth/_recover.pug
+++ b/src/components/auth/_recover.pug
@@ -12,7 +12,7 @@
     form.auth__form(action='#').js-validate-form
       .ui-group
         label(for="login") Логин или электронная почта
-        input.ui-input(type='text' name='login' required)
+        input.ui-input(type='text' name='login' required)#login
 
       button.btn.btn-primary(type="submit") Восстановить
 
