--- a/src/components/auth/_signup.pug
+++ b/src/components/auth/_signup.pug
@@ -16,31 +16,31 @@
         ._ui-col.ui-col.is-6
           .ui-group
             label(for="name") Имя
-            input.ui-input(type='text' name='name')
+            input.ui-input(type='text' name='name')#name
 
         ._ui-col.ui-col.is-6
           .ui-group
             label(for="surname") Фамилия
-            input.ui-input(type='text' name='surname')
+            input.ui-input(type='text' name='surname')#surname
 
       .ui-group
         label(for="position") Должность
-        input.ui-input(type='text' name='position')
+        input.ui-input(type='text' name='position')#position
 
       .ui-group
         label(for="email") Электронная почта
           i.required *
-        input.ui-input(type='email' name='email' required)
+        input.ui-input(type='email' name='email' required)#email
 
       .ui-group
         label(for="passwordRepeat") Пароль
           i.required *
-        input.ui-input(type='password' name='password' required)
+        input.ui-input(type='password' name='password' required)#password
 
       .ui-group
         label(for="passwordRepeat") Подтвердите пароль
           i.required *
-        input.ui-input(type='password' name='passwordRepeat' required)
+        input.ui-input(type='password' name='passwordRepeat' required)#passwordRepeat
 
       button.btn.btn-primary(type="submit") Зарегистрироваться
 
