--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -8,7 +8,7 @@ block content
 
   .page-main
     .main-body
-      .main-content
+      .main-content.main-content--centrify
         .main-content__container.container
           .main-content__inner
 
