--- a/src/components/auth/_login.pug
+++ b/src/components/auth/_login.pug
@@ -10,11 +10,11 @@
     form.auth__form(action='#').js-validate-form
       .ui-group
         label(for="login") Логин
-        input.ui-input(type='text' name='login' required)
+        input.ui-input(type='text' name='login' required)#login
 
       .ui-group
-        label(for="email") Пароль
-        input.ui-input(type='password' name='password' required)
+        label(for="password") Пароль
+        input.ui-input(type='password' name='password' required)#password
 
       .ui-row
         .ui-col
