--- a/src/pug/auth-signup.pug
+++ b/src/pug/auth-signup.pug
@@ -8,7 +8,7 @@ block content
   .page-main
 
     .main-body
-      .main-content
+      .main-content.main-content--centrify
         ._container.container
           ._inner
 
