--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -53,7 +53,7 @@ body, html
   display: flex
   flex-direction: column
   height: 100vh
-  min-height: 500px
+  // min-height: 500px
   // overflow: hidden
 
 .page-main
@@ -74,6 +74,10 @@ body, html
   min-height: 1px
   overflow-x: hidden
   overflow-y: auto
+  &--centrify
+    display: flex
+    flex-direction: column
+    justify-content: center
 
   &__container
     display: flex
