fixed most of validation errors

--- a/src/components/auth/_signup.pug
+++ b/src/components/auth/_signup.pug
@@ -10,7 +10,7 @@
     form.auth__form(action='#').js-validate-form
       .ui-group
         label(for="organization") Название организации
-        input.ui-input(type='text' name='organization')
+        input.ui-input(type='text' name='organization')#organization
 
       .ui-row._ui-row
         ._ui-col.ui-col.is-6
