--- a/src/components/projectCard/_projectCard.pug
+++ b/src/components/projectCard/_projectCard.pug
@@ -1,6 +1,6 @@
 mixin projectCard(obj)
   // project card
-  .project-card.js-link(href="homepage.html")
+  .project-card.js-link(data-href="homepage.html")
     .project-card__content
       .project-card__inner
         .project-card__header
@@ -32,7 +32,7 @@ mixin projectCard(obj)
 
 mixin pollCard(obj)
   // poll card
-  .project-card.js-link(href="homepage.html")
+  .project-card.js-link(data-href="homepage.html")
     .project-card__content
       .project-card__inner
         .project-card__header
