--- a/src/pug/form-questions.pug
+++ b/src/pug/form-questions.pug
@@ -22,7 +22,7 @@ block content
                     label(for="test_1") Показывать варианты ответов
                     ._content
                       label.ui-toggle._ui-toggle
-                        input._input(type='checkbox' name='test_1')
+                        input._input(type='checkbox' name='test_1')#test_1
                         span._handle
 
                 .__sidebar-input
@@ -30,7 +30,7 @@ block content
                     label(for="test_2") Показывать созданные задачи
                     ._content
                       label.ui-toggle._ui-toggle
-                        input._input(type='checkbox' name='test_2')
+                        input._input(type='checkbox' name='test_2')#test_2
                         span._handle
               p.__sidebar-title Разработка интернет-магазина
               .__sidebar-item.main
