--- a/src/pug/project-passport.pug
+++ b/src/pug/project-passport.pug
@@ -26,7 +26,7 @@ block content
                 .ui-counter.js-ui-counter
                   button._btn(type='button' data-type="minus")
                     +svgMono("minus")
-                  input._input(type='text' value='15' min="1" max="99" name="test_2")#test_2
+                  input._input(type='number' value='15' min="1" max="99" name="test_2")#test_2
                   button._btn(type='button' data-type="plus")
                     +svgMono("plus-simple")
 
