--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -269,3 +269,11 @@ textarea.ui-input
     text-align: center
     border-color: transparent
     background-color: $colorBg
+
+input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button
+  -webkit-appearance: none;
+  margin: 0;
+
+
+input[type="number"]
+  -moz-appearance: textfield;
