partial IE fixes

--- a/src/components/auth/_auth.sass
+++ b/src/components/auth/_auth.sass
@@ -28,7 +28,9 @@
     margin: 0 0 20px
 
   &__forgot
+    display: inline-block
     color: $colorLight
+    margin-top: .1em
     transition: color .25s $ease
     &:hover
       color: $colorPrimary
