--- a/src/pug/project-comments.pug
+++ b/src/pug/project-comments.pug
@@ -54,7 +54,8 @@ block content
                 .ui-group
                   textarea.ui-input.js-autosize(rows='6' name='comment' placeholder='Напишите свой комментарий...' required)
 
-                button.btn.btn-outline Отправить
+                ._form-cta
+                  button.btn.btn-outline Отправить
 
 
       +mainFooter("К следующему шагу", {
