--- a/src/sass/elements/_typography.sass
+++ b/src/sass/elements/_typography.sass
@@ -59,6 +59,10 @@ p + p
 .f-900
   font-weight: 900
 
+.tac
+  text-align: center
+.tar
+  text-align: right
 // color modifiers
 .c-red
   color: $colorRed
