--- a/src/components/contentIntro/_intro.pug
+++ b/src/components/contentIntro/_intro.pug
@@ -8,13 +8,13 @@
       ._item
         span._value 14
         p._caption проектов открыто
-        a._link(href='#' title='Создать проект')
+        a._link(href='project-add.html' title='Создать проект')
           span Создать проект
           +svgMono('arrow-right')
       ._item
         span._value 4
         p._caption анкеты созданы, из&nbsp;них 2&nbsp;публичные
-        a._link(href='#' title='Создать анкету')
+        a._link(href='form-add.html' title='Создать анкету')
           span Создать анкету
           +svgMono('arrow-right')
 
@@ -32,7 +32,7 @@
       li._item
         span._icon
           +svgMono('folder')
-        p._title Создавайте проекты на основе имеющихся анкет
+      p._title Создавайте проекты на основе имеющихся анкет
       li._item
         span._icon
           +svgMono('figure')
