--- a/src/pug/shared/_head.pug
+++ b/src/pug/shared/_head.pug
@@ -1,7 +1,7 @@
 // MADE WITH LOVE BY <> KHMELEVSKOY & ASSOCIATES </> www.khmelevskoy.co
 meta(charset="utf-8")
 title= title || 'Page name'
-meta(http-equiv="X-UA-Compatible" content="IE=Edge")
+meta(http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE")
 meta(name="viewport" content="width=device-width, initial-scale=1")
 meta(name="theme-color" content="#fff")
 meta(name="format-detection" content="telephone=no")
