--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -156,11 +156,12 @@ body, html
     flex: 1 1 50%
     max-width: 50%
     padding: 30px 0 30px 30px
-
-
-
-
-
+  &__form
+    .ui-group
+      margin-bottom: 0
+  &__form-cta
+    margin-top: 10px
+    text-align: right
 
 .tile
   display: flex
