--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -279,3 +279,7 @@ input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-i
 
 input[type="number"]
   -moz-appearance: textfield;
+
+[contenteditable=true]:empty:before
+  content: attr(placeholder)
+  display: block
