--- a/src/components/tile/_tile.pug
+++ b/src/components/tile/_tile.pug
@@ -4,4 +4,9 @@ mixin tileCard(obj)
     button.btn-delete.tile__btn-delete.js-tooltip(data-tippy-placement="top" data-tippy-content="Удалить" type='button' title='Удалить')
       +svgMono('delete')
     h3.tile__heading= obj.heading
-    p.tile__caption.js-editable-caption(contenteditable="true" placeholder="Введите имя сотрудника")= obj.caption
+    if obj.caption
+      p.tile__caption.js-editable-caption(contenteditable="true" placeholder="Введите имя сотрудника")= obj.caption
+    if obj.access
+      .tile__select
+        span Доступ:
+        span.tile__selected= obj.access
