--- a/src/components/mainHeader/_main-header.sass
+++ b/src/components/mainHeader/_main-header.sass
@@ -46,9 +46,9 @@
   &__filter
     margin-right: 45px
     display: flex
-    align-items: baseline
-    span
-      margin-right: 10px
+    align-items: center
+    p
+      margin: -3px 10px 0 0
     &:last-child
       margin-right: 0
   &__create
