--- a/src/components/projectCard/_project-card.sass
+++ b/src/components/projectCard/_project-card.sass
@@ -118,11 +118,11 @@
         top: 99%
       &:hover
         background: $borderColor
-        .action__dropdown-buttons
+        .dropdown
           opacity: 1
           pointer-events: all
           visibility: visible
-    .action__dropdown-buttons
+    .dropdown
       right: -6px
       text-align: left
       margin-top: 17px
