--- a/src/components/projectCard/_projectCard.pug
+++ b/src/components/projectCard/_projectCard.pug
@@ -58,9 +58,10 @@ mixin pollCard(obj)
     .project-card__info
       .btn.btn-square
         +svgMono("dots")
-        .action__dropdown-buttons
-          a.action__dropdown-btn(href="#") Изменить
-          a.action__dropdown-btn(href="#") Удалить
+        .dropdown
+          .dropdown__menu
+            a.dropdown__button(href="#") Изменить
+            a.dropdown__button(href="#") Удалить
 
       a.btn.btn-outline(href='#' title='Посмотреть') Посмотреть
 
