--- a/src/components/commentCard/_comment-card.sass
+++ b/src/components/commentCard/_comment-card.sass
@@ -15,21 +15,33 @@
 
   &__actions
     margin-left: auto
-    span
+    .btn
       transition: color .25s $ease
       position: relative
       cursor: pointer
-      padding: 0 3px 5px
+      padding: 0
       font-weight: 700
-      font-size: 14px
+      font-size: 3px
       letter-spacing: 1px
       color: $colorIcon
+      &:before
+        position: absolute
+        display: block
+        content: ''
+        width: 100%
+        height: 20px
+        left: 0
+        top: 90%
       &:hover
         color: $colorPrimary
-        .action__dropdown-buttons
+        .dropdown
           opacity: 1
           pointer-events: all
           visibility: visible
+          text-align: left
+    .dropdown
+      right: -18px
+      top: 12px
 
   &__title
     margin: 0 7px 0 0
