--- a/src/components/projectTasks/_project-tasks.sass
+++ b/src/components/projectTasks/_project-tasks.sass
@@ -8,6 +8,7 @@
       align-items: center
     p
       margin-right: 10px
+      margin: -3px 10px 0 0
       color: $fontColor
     &-buttons
       margin-left: auto
@@ -38,7 +39,7 @@
       flex-direction: column
       align-items: flex-end
     &-select
-      margin-right: 10px
+      margin-right: 50px
       .selectric-wrapper
         width: auto
         .label
