--- a/src/components/mainHeader/_main-header.sass
+++ b/src/components/mainHeader/_main-header.sass
@@ -119,3 +119,21 @@
         margin-top: 23px
       .chosen-drop
         border-radius: 0 0 4px 4px
+    &__link
+      padding: 12px 20px
+      border-radius: 4px
+      border: 1px solid $borderColor
+      line-height: 1
+      span
+        margin: 0
+      .ico
+        display: none
+    &__primary-menu
+      // flex-wrap: nowrap !important
+      // justify-content: space-between
+      // border: 1px solid $borderColor
+      // border-radius: 4px 4px 0 0
+      // border-bottom: none
+      // &__item
+      //   margin: 0
+      //   width: auto
